Bug 1776832 - Clear chrome module environments in shutdown r=arai

Differential Revision: https://phabricator.services.mozilla.com/D150966